@@ -1,3 +1,10 @@
+2006-12-26  Benjamin Berg  <benjamin@sipsolutions.net>
+
+	* engines/clearlooks/src/clearlooks_style.c:
+	(clearlooks_style_draw_box), (clearlooks_style_draw_slider):
+	- Move slider darwing to clearlooks_style_draw_slider.
+	- Use support macros to guard clearlooks_style_draw_box.
+
 2006-12-26  Daniel Borgmann  <daniel.borgmann@gmail.com>
 
 	* engines/lua/src/draw_lib.c: (rectangle), (arc), (luaopen_draw):
